# H2R-Det

./: .gitignore  README.md  pyproject.toml
docs/: KAGGLE.md
scripts/: evaluate_visdrone.py  sanity_check.py  train_visdrone.py
src/h2r_det/: __init__.py  config.py  losses.py  metrics.py  model.py  reporting.py  synthetic.py  utils.py  visdrone.py
